--- a/views/alltitles.ejs
+++ b/views/alltitles.ejs
@@ -5,13 +5,13 @@
 <link rel='stylesheet' href='/stylesheets/style.css' />
 </head>
 <body>
-<h1>Liste des titres</h1>
+<h1>Liste de tous les titres</h1>
 <ul>
     <%
         var list = '';
         for (i = 0; i < alltitles.length; i++) {
             var title = alltitles[i].fields['titre_avec_lien_vers_le_catalogue'];
-            list += '<li>' + title + '</a></li>';
+            list += '<li>' + title + '</li>';
         }
     %>
     <%- list %>
