Affichage des auteurs des titres commançant par N

--- a/views/titles1categ.ejs
+++ b/views/titles1categ.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Liste des titres</title>
+<title>Liste des rang 1 à 10</title>
 <link rel='stylesheet' href='/stylesheets/style.css' />
 </head>
 <body>
-<h1>Liste de tous les titres</h1>
+<h1>Liste des titres ayant des rangs entre 1 et 10</h1>
 <ul>
     <%
         var list = '';
