Liste des types des documents

--- a/views/titles1categ.ejs
+++ b/views/titles1categ.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Liste des rang 1 à 10</title>
+<title>Question 2</title>
 <link rel='stylesheet' href='/stylesheets/style.css' />
 </head>
 <body>
