--- a/views/titles2categ.ejs
+++ b/views/titles2categ.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Liste des rang 1 à 10</title>
+<title>Question 3</title>
 <link rel='stylesheet' href='/stylesheets/style.css' />
 </head>
 <body>
-<h1>Liste des auteurs les titres commançant par N</h1>
+<h1>Liste des auteurs des documents commançant par N</h1>
 <ul>
     <%
         var list = '';
