--- a/views/alltitles.ejs
+++ b/views/alltitles.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Liste des titres</title>
+<title>Question 1</title>
 <link rel='stylesheet' href='/stylesheets/style.css' />
 </head>
 <body>
