--- a/views/titles1categ.ejs
+++ b/views/titles1categ.ejs
@@ -5,7 +5,7 @@
 <link rel='stylesheet' href='/stylesheets/style.css' />
 </head>
 <body>
-<h1>Liste des titres ayant des rangs entre 1 et 10</h1>
+<h1>Liste des titres ayant les rangs entre 1 et 10</h1>
 <ul>
     <%
         var list = '';
