--- a/views/titles3categ.ejs
+++ b/views/titles3categ.ejs
@@ -8,11 +8,11 @@
     <h1>Tableau informatif des documents sans type</h1>
     <table border ="1">
         <thead>
-            <td>N°</td>
-            <td>Titre</td>
-            <td>Auteur</td>
-            <td>Nombre de réservations</td>
-            <td>Nombre de rang</td>
+            <th>N°</th>
+            <th>Titre</th>
+            <th>Auteur</th>
+            <th>Nombre de réservations</th>
+            <th>Nombre de rang</th>
         </thead>
         <%
             var table = '';
