--- a/views/titles4categ.ejs
+++ b/views/titles4categ.ejs
@@ -12,6 +12,7 @@
         var list = '';
         var unique =[];
 
+        //pour récupérer les types des documents qu'on a
         for (i = 0; i < titles4categ.length; i++) {
             var title = titles4categ[i].fields['type_de_document'];
             typedoc.push(title);
